--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -1,37 +1,167 @@
- {% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block title %}<title>Local Library</title>{% endblock %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
-  <!-- Add additional CSS in static file -->
+    {% block title %}<title>Local Library</title>{% endblock %}
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet" type="text/css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static "css/gaia.css" %}" rel="stylesheet"/>
+    <link href="{% static "css/login-register.css" %}" rel="stylesheet"/>
+
+    <link href="{% static "css/pe-icon-7-stroke.css" %}" rel="stylesheet">
+
+    <!-- Add additional CSS in static file -->
 
 </head>
 
 <body>
+<nav class="navbar navbar-default navbar-transparent navbar-fixed-top" color-on-scroll="200">
+  <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
+  <div class="container">
+    <div class="navbar-header">
+      <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar bar1"></span> <span class="icon-bar bar2"></span> <span class="icon-bar bar3"></span> </button>
+      <a href="{% url 'index' %}" class="navbar-brand"> CrowdCur </a> </div>
 
-  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right navbar-uppercase">
+          {% if not request.user.is_authenticated %}
+        <li> <a href="{% url 'signup' %}">Register</a> </li>
+        <li> <a href="javascript:void(0);" onclick="openLoginModal();" class="btn btn-danger btn-fill">Login</a> </li>
+          {% else %}
+        <li> <a href="{% url 'profile' request.user.username %}">Profile</a> </li>
+        <li> <a href="{% url 'logout' %}" class="btn btn-danger btn-fill">Logout</a> </li>
 
-    <div class="row">
-      <div class="col-sm-2">
-      {% block sidebar %}
-      <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All books</a></li>
-          <li><a href="">All authors</a></li>
+
+          {% endif %}
       </ul>
-     {% endblock %}
-      </div>
-      <div class="col-sm-10 ">
-      {% block content %}{% endblock %}
-      </div>
     </div>
 
+
+
+    <!-- /.navbar-collapse -->
   </div>
+</nav>
+{% block content %}
+
+{% endblock %}
+<footer class="footer footer-big footer-color-black" data-color="black">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 col-sm-3">
+                <div class="info">
+                    <h5 class="title">Our Team</h5>
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Discover Projects</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-md-3 col-md-offset-1 col-sm-3">
+                <div class="info">
+                    <h5 class="title"> Help and Support</h5>
+                    <nav>
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms &amp; Conditions</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+
+            </div>
+            <div class="col-md-2 col-md-offset-1 col-sm-3">
+
+            </div>
+        </div>
+        <hr>
+        <div class="copyright"> ©
+            <script> document.write(new Date().getFullYear()) </script>
+            Payam Esfandiari, made with love
+        </div>
+    </div>
+</footer>
+
+<section>
+
+    <div class="modal fade login" id="loginModal">
+        <div class="modal-dialog login animated">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Login with</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="box">
+                        <div class="content">
+                            <div class="social">
+                                <a class="circle github" href="/auth/github">
+                                    <i class="fa fa-github fa-fw"></i>
+                                </a>
+                                <a id="google_login" class="circle google" href="/auth/google_oauth2">
+                                    <i class="fa fa-google-plus fa-fw"></i>
+                                </a>
+                                <a id="facebook_login" class="circle facebook" href="/auth/facebook">
+                                    <i class="fa fa-facebook fa-fw"></i>
+                                </a>
+                            </div>
+                            <div class="division">
+                                <div class="line l"></div>
+                                <span>or</span>
+                                <div class="line r"></div>
+                            </div>
+                            <div class="error"></div>
+                            <div class="form loginBox">
+                                <form method="post" action="{% url 'login' %}" accept-charset="UTF-8">
+                                    {% csrf_token %}
+                                    <input id="id_username" class="form-control" type="text" placeholder="Username" name="username">
+                                    <input id="id-password" class="form-control" type="password" placeholder="Password" name="password">
+                                    <input class="btn btn-default btn-login" type="submit" value="Login">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="forgot login-footer">
+                            <span>Looking to
+                                 <a href="register.html">create an account</a>
+                            ?</span>
+                    </div>
+                    <div class="forgot register-footer" style="display:none">
+                        <span>Already have an account?</span>
+                        <a href="javascript: showLoginForm();">Login</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+
+<!--  js library for devices recognition -->
+<script type="text/javascript" src="{% static "js/modernizr.js" %}"></script>
+
+<!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
+<script type="text/javascript" src="{% static "js/gaia.js" %}"></script>
+
+<script type="text/javascript" src="{% static "js/login-register.js" %}"></script>
+
+{% block js %}
+
+{% endblock %}
+
 </html>
