--- a/static/css/gaia.css
+++ b/static/css/gaia.css
@@ -934,7 +934,7 @@ a,
 }
 
 .section {
-  padding: 50px 0;
+  padding: 100px 0;
   position: relative;
   background-color: #FAFAFA;
 }
@@ -2463,6 +2463,13 @@ a,
   position: absolute;
   display: block;
 }
+.work-image {
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+  display: block;
+}
+
 
 .section-get-started,
 .section-header-freebie,
