--- a/templates/crowdcur/worker_dashboard.html
+++ b/templates/crowdcur/worker_dashboard.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base_generic.html" %}
+{% load static %}
+{% block title %}
+ <title> Dashboard for </title>
+{% endblock %}
+{% block content %}
 
-</body>
-</html>
+{% endblock %}
+
+{% block js %}
+
+{% endblock %}
