--- a/templates/workinterface/answer.html
+++ b/templates/workinterface/answer.html
@@ -1,30 +1,58 @@
 {% extends "base_generic.html" %}
 {% load static %}
 {% block content %}
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="title-area">
+                    <h2>{{ task.task_type.task_title }}</h2>
 
-    <h1>{{ task.task_type.task_description }}</h1>
-    {% if task.task_type_id == 1 %}
-        {% with "workinterface/task1/"|add:t.img as image_static %}
-        <p>{{ t.img }}</p>
-        <img src="{% static image_static %}" alt="My image"/>
-        {% endwith %}
-    {% elif task.task_type_id == 2 %}
-        <h3>{{ t.tweet }}</h3>
-        <h4>Directed at : {{ t.product }}</h4>
-    {% endif %}
-    <form action="{% url 'sendans' task.id %}" method="post">
-    {% csrf_token %}
+                    <div class="separator separator-danger">✻</div>
+                    <p class="description">{{ task.task_type.task_description }}</p>
+                </div>
+            </div>
+            <div class="content">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-xs-12 col-md-8">
+                        {% if task.task_type_id == 1 %}
+                            {% with "workinterface/task1/"|add:t.img as image_static %}
+                                <div class="image-container">
+                                    <img class="work-image" src="{% static image_static %}" alt=""/>
+                                </div>
+                            {% endwith %}
+                        {% elif task.task_type_id == 2 %}
+                            <h3>{{ t.tweet }}</h3>
+                            <h4>Directed at : <span class="label label-info">{{ t.product }}</span></h4>
+                        {% endif %}
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
 
-        <select name="ans" id="answer">
-            {% for choice in t.opts %}
-                <option name="choice" id="choice{{ forloop.counter }}" value="{{ choice }}">{{ choice }}</option>
-            {% endfor %}
-        </select>
-        <input type="submit" value="Submit" />
-    </form>
+            <div class="row">
+                <div class="col-md-2"></div>
 
-
-<p>Task Payment : {{ task.task_type.task_payment }}</p>
-<p>Task Time : {{ task.task_type.task_time }}</p>
-<p> {{ now|date }}</p>
+                <div class="col-md-8">
+                    <div class="tab-content">
+                        <form action="{% url 'sendans' task.id %}" method="post" class="form-horizontal">
+                            <input type="hidden" id="plugin_task_uid" name="task_uid" value="{{ task.task_uid }}">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="answer">Please choose : </label>
+                                <select name="ans" id="answer" class="form-control">
+                                    {% for choice in t.opts %}
+                                        <option name="choice" id="choice{{ forloop.counter }}"
+                                                value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <input type="submit" value="Submit" class="btn btn-fill btn-black"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </section>
 {% endblock %}
