--- a/templates/workinterface/work.html
+++ b/templates/workinterface/work.html
@@ -7,7 +7,6 @@
                 <div class="row">
                     <div class="col-md-1"></div>
                     {% for t in task_set %}
-
                        {% include 'workinterface/_work_instance.html' with task=t only %}
                     {% endfor %}
                     <div class="col-md-1"></div>
@@ -17,4 +16,15 @@
     </section>
 
 
+{% endblock %}
+
+{% block js %}
+<script type="text/javascript">
+    $(function() {
+       $(".card").click(function (e) {
+
+       });
+    });
+
+</script>
 {% endblock %}
