--- a/templates/workinterface/_work_instance.html
+++ b/templates/workinterface/_work_instance.html
@@ -1,5 +1,6 @@
 <div class="col-md-2">
     <a href="{{ task.id }}">
+        <input type="hidden" class="plugin_task_uid" value="{{ task.task_uid }}">
         <div class="card card-member">
             <div class="content">
 
