--- a/static/css/gaia.css
+++ b/static/css/gaia.css
@@ -3869,7 +3869,7 @@ input:checked + .slider:before {
 
 .preference {
     margin-bottom: 10px;
-    display: none;
+    display: block;
 }
 
 /*Cards Iframe as image*/
