--- a/templates/crowdcur/worker_dashboard.html
+++ b/templates/crowdcur/worker_dashboard.html
@@ -1,12 +1,242 @@
 {% extends "base_generic.html" %}
 {% load static %}
 {% block title %}
- <title> Dashboard for </title>
+    <title> Dashboard for {{ username }} </title>
 {% endblock %}
 {% block content %}
+    <section class="section section-header-freebie section-white">
+        <div class="container">
+            <div class="content">
+                <div class="row ">
+                    <div class="title-area">
+                        <h2>Here is how you did {{ username }}:</h2>
+                        <div class="separator separator-danger">✻</div>
+                    </div>
 
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="info-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-graph1"></i>
+                            </div>
+                            <h3>Income</h3>
+                            <p class="description">You made <strong class="bg-success">{{ info.total_money }}$</strong>.
+                                On average <strong class="bg-success">{{ info.avg_money }}$</strong>.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="info-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-note2"></i>
+                            </div>
+                            <h3>Time</h3>
+                            <p class="description">Your average session takes <strong
+                                    class="bg-danger">{{ info.avg_time }}seconds</strong>
+                                people with <strong class="bg-success">10.1 seconds</strong> average session made more
+                                money.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="info-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-music"></i>
+                            </div>
+                            <h3>Rank</h3>
+                            <p class="description">You rank in the first <strong class="bg-success">14%</strong> of
+                                market. Your accuracy is
+                                <strong class="bg-success">{{ info.avg_acc }}%</strong>.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="title-area">
+                        <div class="separator separator-danger">✻</div>
+                        <h2>Interesting information :</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Time you have spent on different tasks.</h3>
+                        <div id="perf_time" class="worker-chart"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Changes in your preference as captured by our model.</h3>
+                        <div id="time_spent" class="worker-chart"></div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
 {% endblock %}
 
 {% block js %}
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script type="text/javascript">
+        var data1 = [{
+            values: [213, 154, 12,85],
+            labels: ['Image Tagging', 'Tweet Sentiment', 'Image Labelling','Annotation'],
+            type: 'pie'
+        }];
+
+        var layout1 = {
+            height: 400,
+            width: 500
+        };
+        Plotly.newPlot('perf_time', data1, layout1);
+var xData = [
+  [201, 202, 203, 204, 205, 206, 207, 208, 209, 210],
+  [201, 202, 203, 204, 205, 206, 207, 208, 209, 210],
+  [201, 202, 203, 204, 205, 206, 207, 208, 209, 210],
+    [201, 202, 203, 204, 205, 206, 207, 208, 209, 210]
+];
+
+var yData = [
+  [74, 82, 80, 74, 73, 72, 74, 70, 70, 66],
+  [45, 42, 50, 46, 36, 36, 34, 35, 32, 31],
+  [13, 14, 20, 24, 20, 24, 24, 40, 35, 41],
+  [18, 21, 18, 21, 16, 14, 13, 18, 17, 16]
+];
+
+var colors = ['rgba(67,67,67,1)', 'rgba(115,115,115,1)', 'rgba(49,130,189, 1)',
+  'rgba(189,189,189,1)'
+];
+
+var lineSize = [2, 2, 4, 2];
+
+var labels = ['High Payment', 'Image Tagging', 'Image Labeling', 'Tweet Sentiment'];
+var data = [];
+
+for ( var i = 0 ; i < xData.length ; i++ ) {
+  var result = {
+    x: xData[i],
+    y: yData[i],
+    type: 'scatter',
+    mode: 'lines',
+    line: {
+      color: colors[i],
+      width: lineSize[i]
+    }
+  };
+  var result2 = {
+    x: [xData[i][0], xData[i][9]],
+    y: [yData[i][0], yData[i][9]],
+    type: 'scatter',
+    mode: 'markers',
+    marker: {
+      color: colors[i],
+      size: 12
+    }
+  };
+  data.push(result, result2);
+}
+
+var layout = {
+  showlegend: false,
+  height: 400,
+  width: 600,
+  xaxis: {
+    showline: true,
+    showgrid: false,
+    showticklabels: true,
+    linecolor: 'rgb(204,204,204)',
+    linewidth: 2,
+    autotick: false,
+    ticks: 'outside',
+    tickcolor: 'rgb(204,204,204)',
+    tickwidth: 2,
+    ticklen: 5,
+    tickfont: {
+      family: 'Arial',
+      size: 12,
+      color: 'rgb(82, 82, 82)'
+    }
+  },
+  yaxis: {
+    showgrid: false,
+    zeroline: false,
+    showline: false,
+    showticklabels: false
+  },
+  autosize: false,
+  margin: {
+    autoexpand: false,
+    l: 100,
+    r: 20,
+    t: 100
+  },
+  annotations: [
+    {
+      xref: 'paper',
+      yref: 'paper',
+      x: 0.0,
+      y: 1.05,
+      xanchor: 'left',
+      yanchor: 'bottom',
+      text: '',
+      font:{
+        family: 'Arial',
+        size: 30,
+        color: 'rgb(37,37,37)'
+      },
+      showarrow: false
+    },
+    {
+      xref: 'paper',
+      yref: 'paper',
+      x: 0.5,
+      y: -0.1,
+      xanchor: 'center',
+      yanchor: 'top',
+      text: '',
+      showarrow: false,
+      font: {
+        family: 'Arial',
+        size: 12,
+        color: 'rgb(150,150,150)'
+      }
+    }
+  ]
+};
+
+for( var i = 0 ; i < xData.length ; i++ ) {
+  var result = {
+    xref: 'paper',
+    x: 0.05,
+    y: yData[i][0],
+    xanchor: 'right',
+    yanchor: 'middle',
+    text: labels[i],
+    showarrow: false,
+    font: {
+      family: 'Arial',
+      size: 16,
+      color: 'black'
+    }
+  };
+  var result2 = {
+    xref: 'paper',
+    x: 0.95,
+    y: yData[i][9],
+    xanchor: 'left',
+    yanchor: 'middle',
+    text: yData[i][9] +'%',
+    font: {
+      family: 'Arial',
+      size: 16,
+      color: 'black'
+    },
+    showarrow: false
+  };
+
+  layout.annotations.push(result, result2);
+}
+
+Plotly.newPlot('time_spent', data, layout);
+    </script>
 
 {% endblock %}
