--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet" type="text/css">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="{% static "css/gaia.css" %}" rel="stylesheet"/>
     <link href="{% static "css/login-register.css" %}" rel="stylesheet"/>
 
