First complete, working Website

--- a/templates/crowdcur/worker_dashboard.html
+++ b/templates/crowdcur/worker_dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 {% block title %}
-    <title> Dashboard for {{ username }} </title>
+     Dashboard for {{ username }}
 {% endblock %}
 {% block content %}
     <section class="section section-header-freebie section-white">
